[project]
name = "trove-setup"
version = "1.0.0"
description = "Simple TUI for setting up trove classifiers"
authors = [{ name = "Jan Vollmer", email = "jan@vllmr.dev" }]
dependencies = [
  "textual>=0.83.0",
  "trove-classifiers>=2024.10.16",
  "typer>=0.12.5",
  "tomlkit>=0.13.2",
  "jmespath>=1.0.1",
  "rich>=13.9.2",
  "packaging>=24.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
keywords = ["trove", "classifier", "pypi", "package"]

[project.urls]
Repository = "https://github.com/jvllmr/trove-setup"

[project.scripts]
trove_setup = "trove_setup.cli:run_typer"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pycln]
all = true

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/trove_setup"]
exclude = ["tests"]

[tool.pdm]
ignore_package_warnings = ["pre-commit"]
plugins = ["sync-pre-commit-lock"]
[tool.pdm.scripts]
dev = "textual run trove_setup.app:TroveSetupApp --dev"
console = "textual console"
test = "pytest -n auto"

[tool.pdm.dev-dependencies]
dev = [
  "mypy>=1.12.1",
  "ruff>=0.7.0",
  "pytest>=7.4.4",
  "isort>=5.13.2",
  "pycln>=2.4.0",
  "pyaphid>=0.3.1",
  "pre-commit>=3.8.0",
  "nox>=2024.10.9",
  "textual-dev>=1.6.1",
  "pytest-textual-snapshot>=0.4.0",
  "types-jmespath>=1.0.2.20240106",
  "tomli>=2.0.2",
  "pytest-xdist>=3.6.1",
  "pytest-asyncio>=0.24.0",
]

[tool.isort]
profile = "black"

[tool.nox]
